--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ chrome-user-data
 *.swp
 *.swo
 
+# untrack part1 folder
+/part1
+
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
 packages/react-devtools-extensions/chrome/*.crx
